--- a/myst.yml
+++ b/myst.yml
@@ -66,7 +66,7 @@ project:
       - file: elementaire/td.md
         children:
         - file: elementaire/tdc.md
-      # - file: elementaire/tp.md
+      - file: elementaire/tp.ipynb
         # - file: elementaire/tpc1.md
     
     - file: convolution/intro.ipynb
@@ -74,7 +74,7 @@ project:
       - file: convolution/td.md
         children:
         - file: convolution/tdc.md
-      # - file: convolution/tp.md
+      - file: convolution/tp.md
         # - file: convolution/tpc2.md
     
     - file: xcorr/intro.md
@@ -82,7 +82,7 @@ project:
       - file: xcorr/td.md
         children:
         - file: xcorr/tdc.md
-      # - file: xcorr/tp.md
+      - file: xcorr/tp.md
         # - file: xcorr/tpc3.md
     
     - file: vectoriel/intro.ipynb
